<resources>
    <string name="admob_app_id" translatable="false">ca-app-pub-2209532931509792~8339365074</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-2209532931509792/8814718236</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
     <string name="app_name">WorkoutTM</string>
    <string name="stop_workout">Stop workout</string>
    <string name="add_new_exercise">Add new exercise</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="rename">Rename</string>
    <string name="ok">Ok</string>
    <string name="nothing_to_play">Nothing to play</string>
    <string name="q_stop_workout">Stop workout?</string>
    <string name="add_new_workout">Add new workout</string>
    <string name="settings">Settings</string>
    <string name="move_delete">Move, delete</string>
    <string name="position">Position</string>
    <string name="set">Set</string>
    <string name="new_workout">New workout</string>
    <string name="three_characters">At least three characters</string>
    <string name="def_sound">Default sound</string>
    <string name="def_vibration">Default vibration</string>
    <string name="stop_workout_to_make_change">Stop workout to make changes</string>
    <string name="total_time">Total time: </string>
    <string name="q_delete_exercise">"Delete "</string>
    <string name="pause">Pause</string>
    <string name="continueWorkout" >Continue</string>
    <string name="notifications">Notifications</string>
    <string name="finished">Finished</string>
    <string name="notif_time">Progress time in notification</string>
    <string name="black">Dark theme</string>
    <string name="edit">Edit</string>
    <string name="duplicate">Duplicate</string>
    <string name="delete">Delete</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="name">Name</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="name_cant_be_empty">Name can\'t be empty</string>
    <string name="remove_ads">Remove Ads</string>
</resources>
